--- a/app/views/food/index.html.erb
+++ b/app/views/food/index.html.erb
@@ -1,8 +1,4 @@
 
-
-        <!--
-        #Portfolio
-        ========================== -->
         
         <section id="portfolio">
 
@@ -35,7 +31,7 @@
                 
 
                 <figure class="mix portfolio-item egg">
-                    <img class="img-responsive" src="assets/참치계란롤.jpg" alt="Portfolio Item">
+                    <img class="img-responsive" src="http://img.lifestyler.co.kr/uploads/program/cheditor/2017/05/LRUH8EH4WI8G46OGVEOV.jpg" alt="Portfolio Item">
                     <a href="/food/edit/2" title="Title Two" rel="portfolio" class="fancybox"><span class="plus"></span></a>
                     <figcaption class="mask">
                         <h3>참치계란롤</h3>
